reestructuro el html y codeo el primer ejemplo de mario bros

--- a/index.html
+++ b/index.html
@@ -5,23 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div>
         <div class="fondo1">
             <div class="nubes1">
-                <div class="mario1"></div>
-                <div class="suelo1"></div>
-                <div class="texto1">&ltdiv&gt anterior</div>
+                <div class="suelo1">
+                    <div class="mario1">
+                        <div class="texto1">&nbsp;&ltdiv&gt anterior</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <br><br>
     <div>
         <div class="fondo2">
             <div class="nubes2">
-                <div class="mario2"></div>
-                <div class="suelo2"></div>
-                <div class="texto2">Contenido del div de prueba</div>
+                <div class="suelo2">
+                    <div class="mario2">
+                        <div class="texto2">&nbsp;Contenido del div de prueba</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
