con el primer ejemplo terminado, procedo a estructurar los otros dos ejemplos en html y css. finalizado.

--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
             <div class="nubes2">
                 <div class="suelo2">
                     <div class="mario2">
-                        <div class="texto2">&nbsp;Contenido del div de prueba</div>
+                        <div class="texto2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contenido del div de prueba</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <br><br>
     <div>
         <div class="fondo3">
             <div class="nubes3">
-                <div class="mario3"></div>
-                <div class="suelo3"></div>
-                <div class="texto3">&ltdiv&gt posterior</div>
+                <div class="suelo3">
+                    <div class="mario3">
+                        <div class="texto3">&nbsp;&ltdiv&gt posterior</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
